# popjaxrl

./: pyproject.toml  requirements.txt  run_popgym.py
algorithms/: ppo_gru.py  ppo_s5.py  s5.py
envs/: registration.py  wrappers.py
envs/environments/: __init__.py  meta_cartpole.py  popgym_autoencode.py  popgym_battleship.py  popgym_cartpole.py  popgym_concentration.py  popgym_count_recall.py  popgym_higherlower.py  popgym_minesweeper.py  popgym_multiarmedbandit.py  popgym_pendulum.py  popgym_repeat_first.py  popgym_repeat_previous.py
