[project]
name = "popjaxrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.5",
    "equinox>=0.12.2",
    "gym>=0.26.2",
    "gymnax>=0.0.9",
    "jaxopt>=0.8.5",
    "matplotlib-inline>=0.1.7",
    "optax>=0.2.5",
    "wandb>=0.21.0",
]
